--- a/e-commerce/src/Details/details.scss
+++ b/e-commerce/src/Details/details.scss
@@ -2,6 +2,7 @@
     width: 85%;
     margin: auto;
     .details{
+        margin-top: 100px;
         display: flex;
         .details-image{
             width: 50%;
