--- a/e-commerce/src/basket/basket.scss
+++ b/e-commerce/src/basket/basket.scss
@@ -123,6 +123,7 @@
 .heading{
     padding: 20px 10px 20px 10px;
     h2{
+        margin-top: 100px;
         padding: 8px 0px;
         text-align: center;
         font-weight: 100;
